<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".authentication.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/lucida_calligraphy_italic"
            android:gravity="center_horizontal"
            android:text="JB Study\nPoint"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lucida_calligraphy_italic"
            android:gravity="center_horizontal"
            android:text="@string/heading"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="107dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/linear_layout_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="55dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/enter_name"
                        android:textSize="15sp"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Autofill,TextFields" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/enter_email"
                        android:src="@drawable/ic_baseline_person_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="130dp"
                    android:background="@drawable/linear_layout_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="55dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/enter_email"
                        android:textSize="15sp"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Autofill,TextFields" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/enter_email"
                        android:src="@drawable/ic_baseline_mail_outline_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/linear_layout_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="50dp"
                    app:layout_constraintHeight_min="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_layout">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="55dp"
                        android:background="@drawable/edit_text_shape"
                        android:hint="@string/password"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Autofill,TextFields" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/password"
                        android:src="@drawable/ic_baseline_lock_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/confirm_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/linear_layout_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="50dp"
                    app:layout_constraintHeight_min="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_layout">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_shape"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="55dp"
                        android:hint="@string/confirm_password"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="Autofill,TextFields" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        android:contentDescription="@string/confirm_password"
                        android:src="@drawable/ic_baseline_lock_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirm_password_layout" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_button">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/signin_now_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_now"
                        android:textColor="@color/pink" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_signing_in_you_are_agree_with_our"
                android:textSize="12sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/privacy_policy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_amp_conditions"
                android:textSize="12sp"
                android:textColor="#FF8C00" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/registerProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:indeterminateDrawable="@drawable/progress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>